[tool.poetry]
name = "kmessenger"
version = "1.0.0"
description = "KMessenger"
authors = ["kuyugama <mail.kuyugama@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^43.0.1"
pycryptodome = "^3.21.0"
blessed = "^1.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
